# ftp

./: CMakeLists.txt  README.md  compile_flags.txt
.github/workflows/: ci.yml
src/: CMakeLists.txt  command.c  command.h  list.h  main.c  types.h  worker.c  worker.h
src/tests/: worker.cpp
